publish: Update index.md
generated from commit a894f260101bbe23a5027f1a7fa4261a7d424aec

--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
-<p>본 문서는 LG U+ STT 후보정 프로젝트에 사용된 API의 스펙과 사용법을 기술한 문서입니다.<br>
-본 문서에서 다루고 있는 API 의 종류는</p>
+<p>본 문서는 LG U+ STT 후보정 프로젝트에 사용된 API의 스펙과 사용법을 기술한 문서입니다.  </p>
+
+<p>본 문서에서 다루고 있는 API 의 종류는</p>
 
 <ul>
 <li>LG U+ NLP<br>
