publish: Update index.md
generated from commit 7987b28d6627660034cbb0dba7b7c13abbde73cc

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ LG U+ Engine</li>
 <li>Error Correction<br>
 
 <ul>
-<li>날씨 Retrieval 
+<li>날씨 Retrieval<br>
 날씨 도메인의 오류 문장을 정답 셋의 유사 발화를 Retrieval 하여 보정<br></li>
 <li>음악 Retrieval
 개체명 오인식에 포커싱하고 부분 보정 방식, 오류 단어를 개체명 사전의 유사 단어를 Retrieval 하여 보정<br></li>
@@ -290,9 +290,10 @@ Seq2Seq + Attention 모델을 사용해 Generative 방식을 사용<br></li>
 <li>전체 치환 Dictionary
 사전(Dictionary) 기반 보정으로, 사전에 등록된 문장과 정확히 일치하면 보정<br></li>
 </ul></li>
-<li>Integrated Simulator
-Detection과 Correction 통합 Simulator</li>
+<li>Integrated Simulator<br></li>
 </ul>
+
+<p>Detection과 Correction 통합 Simulator</p>
 
 <p>입니다.
 해당 API 에 대해서, 다루고 있는 언어는 JavaScript, Python 입니다. Code example은 오른쪽의 어두운 부분에서 확일할 수 있으며 오른쪽 상단의 탭에서 언어를 바꿀 수 있습니다.</p>
