--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <a href="#lg-u-nlp" class="toc-h2 toc-link" data-title="LG U+ NLP">LG U+ NLP</a>
                   </li>
                   <li>
-                    <a href="#phoneme-embedding" class="toc-h2 toc-link" data-title="Phoneme Embedding">Phoneme Embedding</a>
+                    <a href="#p2v_snn_music_encoder-api" class="toc-h2 toc-link" data-title="p2v_snn_music_encoder API">p2v_snn_music_encoder API</a>
                   </li>
                   <li>
                     <a href="#error-detection" class="toc-h2 toc-link" data-title="Error Detection">Error Detection</a>
@@ -297,7 +297,112 @@ Seq2Seq + Attention 모델을 사용해 Generative 방식을 사용<br></li>
 
 <p>입니다.
 해당 API 에 대해서, 다루고 있는 언어는 JavaScript, Python 입니다. Code example은 오른쪽의 어두운 부분에서 확일할 수 있으며 오른쪽 상단의 탭에서 언어를 바꿀 수 있습니다.</p>
-<h1 id='authentication'>Authentication</h1><h1 id='api'>API</h1><h2 id='lg-u-nlp'>LG U+ NLP</h2><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='phoneme-embedding'>Phoneme Embedding</h2><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='error-detection'>Error Detection</h2><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='error-correction'>Error Correction</h2><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h3 id='retrieval'>날씨 Retrieval</h3><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h3 id='retrieval-2'>음악 Retrieval</h3><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h3 id='generative'>음악 Generative</h3><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h3 id='dictionary'>전체 치환 Dictionary</h3><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='integrated-simulator'>Integrated Simulator</h2><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='get-all-kittens'>Get All Kittens</h2><pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
+<h1 id='authentication'>Authentication</h1><h1 id='api'>API</h1><h2 id='lg-u-nlp'>LG U+ NLP</h2>
+<p>LGU+ NLP Engine. 의도 분석 기능 제공.</p>
+
+<ul>
+<li>디바이스별로 지원되는 도메인이 다름. 음악 도메인의 경우, Connected Car 로 디바이스 세팅 필요.</li>
+<li>개발서버 NLP 엔진을 연결시켜 NER 사전이 올해 초 이후 업데이트 안 되어 있어 결과 분석시 고려 필요</li>
+</ul>
+<pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='p2v_snn_music_encoder-api'>p2v_snn_music_encoder API</h2>
+<p>입력 word 를 PhonemeEmbedding 화 하고, 미리 학습된 p2v_snn_music_encoder 를 사용해서 벡터를 얻고,</p>
+
+<p>해당 벡터를 사용해서 기존의 가지고 있었던 NER 사전과 가장 유사한 벡터를 출력</p>
+<h3 id='http-request'>HTTP Request</h3>
+<blockquote>
+<p>POST, http://13.209.114.137:3001/stt-pc/api/p2v_ifs/v0.1
+JSON, 
+{
+    &#39;word&#39; : &#39;트이아스&#39;,
+    &#39;threshold&#39;:0.99
+} </p>
+</blockquote>
+<h4 id='parameter-description'>Parameter Description</h4>
+<table><thead>
+<tr>
+<th>word</th>
+<th>오류 NER 단어</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>threshold</td>
+<td>해당 threshold 를 넘는 벡터를 정답으로 출력</td>
+</tr>
+</tbody></table>
+<h3 id='response'>Response</h3>
+<blockquote>
+<p>JSON
+{
+    &#39;ifs_result&#39;:[ ],
+    &#39;find_ans&#39;: , 
+    &#39;top1&#39;: ,
+    &#39;non_deep&#39;: ,
+    &#39;elapsedTime&#39;:
+}</p>
+</blockquote>
+<h4 id='parameter-description-2'>Parameter Description</h4>
+<p>------|------
+ifs_result | 가장 유사한 topN 개 단어
+find_ans   | classification을 통해서 추출된 정답 개수
+word | 오류 NER 단어
+------|------
+threshold | 해당 threshold 를 넘는 벡터를 정답으로 출력</p>
+
+<p>1) 비학습 버전 : g2p converter, p2v converter 사용 
+  2) 학습 버전 : p2v + Siamese Network 학습 Encoder 사용 </p>
+
+<ul>
+<li>데모는 음악 도메인 NER 사전 기반 Phoneme Embedding 으로 학습 버전 Encoder 로 생성함.
+<code>javascript
+</code></li>
+</ul>
+<pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ifs_config</span>
+<span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">inference</span> <span class="k">as</span> <span class="n">ifs_inference</span>
+
+<span class="n">config_ifs</span> <span class="o">=</span> <span class="n">ifs_config</span><span class="o">.</span><span class="n">get_p2vInferSent_config</span><span class="p">()</span>
+<span class="n">inferSent_inference</span><span class="p">,</span> <span class="n">non_deep_inference</span> <span class="o">=</span> <span class="n">ifs_inference</span><span class="o">.</span><span class="n">get_inference_module</span><span class="p">(</span><span class="n">config_ifs</span><span class="p">)</span>
+
+<span class="n">non_deep_result</span> <span class="o">=</span> <span class="n">non_deep_inference</span><span class="p">(</span> <span class="n">word</span> <span class="p">)</span>
+</code></pre><h2 id='error-detection'>Error Detection</h2>
+<p>보정 대상 문장을 검출하는 모델로, CNN 분류 모델로 학습.
+도메인별로 학습된 2개의 이진 분류 모델을 이용하여, &#39;날씨 보정 대상, &#39;음악 보정 대상&#39;, &#39;그 외&#39; 의 3가지 클래스로 분류
+<code>javascript
+</code></p>
+<pre class="highlight python tab-python"><code></code></pre><h2 id='error-correction'>Error Correction</h2>
+<p>기본적으로 Siamese Neural Network 을 통해 Speech Encoder 를 학습하여 Retrieval 방식으로 보정. 추가로 음악에서 Generative 방식 보정 방식 실험 
+각 도메인 특성에 맞는 모델 선택이 필요.</p>
+
+<ol>
+<li>(날씨) Retrieval Model by Utterance (Sentence Correction) </li>
+<li>(음악) Retrieval Model by Error Span (Partial Correction) </li>
+<li>(음악) Generative Model</li>
+</ol>
+<h3 id='retrieval'>날씨 Retrieval</h3>
+<p>날씨 도메인의 경우 음악 도메인에 비교해 한정된 패턴을 가지고 있어 Retrieval Model 로 접근 </p>
+
+<p>Siamese Neural Network 을 통해 학습된 Speech Encoder 를 통해 미리 벡터화한 정답셋에서 유사 발화를 Retrieval 하여 보정.</p>
+<pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h3 id='retrieval-2'>음악 Retrieval</h3>
+<p>음악 도메인의 경우, 가수/노래명/장르 등 개체명이 발화의 많은 부분을 차지하기 때문에, 개체명 오인식에 포커싱하여 부분 보정 방식으로 접근</p>
+
+<p>Pointer Network 을 이용해 Error Span 을 찾아내고, 해당 Span 을 Speech Encoder 로 생성한 Phoneme Embedding 에서 Retrieval 하여 부분 보정</p>
+
+<p>Phoneme Embedding 의 경우 음악 도메인 NER 사전을 이용해 패턴으로 조합하여 구축. 최신 NER 사전이 미반영되어 있어 고려 필요
+<code>javascript
+</code></p>
+<pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ifs_config</span>
+<span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">inference</span> <span class="k">as</span> <span class="n">ifs_inference</span>
+<span class="kn">from</span> <span class="nn">ptr_net_err_span</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ptr_config</span>
+<span class="kn">from</span> <span class="nn">ptr_net_err_span</span> <span class="kn">import</span> <span class="n">inference</span> <span class="k">as</span> <span class="n">ptr_inference</span>
+
+<span class="n">config_ifs</span> <span class="o">=</span> <span class="n">ifs_config</span><span class="o">.</span><span class="n">get_p2vInferSent_config</span><span class="p">()</span>
+<span class="n">config_ptr</span> <span class="o">=</span> <span class="n">ptr_config</span><span class="o">.</span><span class="n">get_p2vPointerNet_config</span><span class="p">()</span>
+
+<span class="n">inferSent_inference</span><span class="p">,</span> <span class="n">non_deep_inference</span> <span class="o">=</span> <span class="n">ifs_inference</span><span class="o">.</span><span class="n">get_inference_module</span><span class="p">(</span><span class="n">config_ifs</span><span class="p">)</span>
+<span class="n">pointer_net_inference</span> <span class="o">=</span> <span class="n">ptr_inference</span><span class="o">.</span><span class="n">get_inference_module</span><span class="p">(</span><span class="n">config_ptr</span><span class="p">)</span>
+
+<span class="n">ptr_result</span> <span class="o">=</span> <span class="n">pointer_net_inference</span><span class="p">(</span> <span class="p">[</span> <span class="n">sentence</span> <span class="p">]</span> <span class="p">)</span>
+
+</code></pre><h3 id='generative'>음악 Generative</h3><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h3 id='dictionary'>전체 치환 Dictionary</h3><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='integrated-simulator'>Integrated Simulator</h2><pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='get-all-kittens'>Get All Kittens</h2><pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
 
 <span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
 <span class="n">api</span><span class="p">.</span><span class="nf">kittens</span><span class="p">.</span><span class="nf">get</span>
@@ -333,7 +438,7 @@ Seq2Seq + Attention 모델을 사용해 Generative 방식을 사용<br></li>
 </span><span class="p">]</span><span class="w">
 </span></code></pre>
 <p>This endpoint retrieves all kittens.</p>
-<h3 id='http-request'>HTTP Request</h3>
+<h3 id='http-request-2'>HTTP Request</h3>
 <p><code>GET http://example.com/api/kittens</code></p>
 <h3 id='query-parameters'>Query Parameters</h3>
 <table><thead>
@@ -387,7 +492,7 @@ Remember — a happy kitten is an authenticated kitten!
 <p>This endpoint retrieves a specific kitten.</p>
 
 <aside class="warning">Inside HTML code blocks like this one, you can't use Markdown, so use <code>&lt;code&gt;</code> blocks to denote code.</aside>
-<h3 id='http-request-2'>HTTP Request</h3>
+<h3 id='http-request-3'>HTTP Request</h3>
 <p><code>GET http://example.com/kittens/&lt;ID&gt;</code></p>
 <h3 id='url-parameters'>URL Parameters</h3>
 <table><thead>
@@ -426,7 +531,7 @@ Remember — a happy kitten is an authenticated kitten!
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <p>This endpoint deletes a specific kitten.</p>
-<h3 id='http-request-3'>HTTP Request</h3>
+<h3 id='http-request-4'>HTTP Request</h3>
 <p><code>DELETE http://example.com/kittens/&lt;ID&gt;</code></p>
 <h3 id='url-parameters-2'>URL Parameters</h3>
 <table><thead>
