publish: Update index.md
generated from commit 7987b28d6627660034cbb0dba7b7c13abbde73cc

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@ Detection과 Correction 통합 Simulator</li>
 <p>해당 벡터를 사용해서 기존의 가지고 있었던 NER 사전과 가장 유사한 벡터를 출력</p>
 <h3 id='http-request'>HTTP Request</h3>
 <p><code>
-POST, http://13.209.114.137:3001/stt-pc/api/p2v_ifs/v0.1
-JSON, 
+&#39;POST, http://13.209.114.137:3001/stt-pc/api/p2v_ifs/v0.1&#39;
+&#39;JSON, &#39;
 {
     &#39;word&#39; : &#39;트이아스&#39;,
     &#39;threshold&#39;:0.99
