--- a/index.html
+++ b/index.html
@@ -334,33 +334,50 @@ JSON,
 </tr>
 </tbody></table>
 <h3 id='response'>Response</h3>
-<blockquote>
-<p>JSON
+<p><code>
+JSON
 {
     &#39;ifs_result&#39;:[ ],
     &#39;find_ans&#39;: , 
     &#39;top1&#39;: ,
     &#39;non_deep&#39;: ,
     &#39;elapsedTime&#39;:
-}</p>
-</blockquote>
+}
+</code></p>
 
-<p>Parameter Description
-------|------
-ifs_result | 가장 유사한 topN 개 단어
-find_ans   | classification을 통해서 추출된 정답 개수
-word | 오류 NER 단어
-threshold | 해당 threshold 를 넘는 벡터를 정답으로 출력</p>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>ifs_result</td>
+<td>가장 유사한 topN 개 단어</td>
+</tr>
+<tr>
+<td>find_ans</td>
+<td>classification을 통해서 추출된 정답 개수</td>
+</tr>
+<tr>
+<td>word</td>
+<td>오류 NER 단어</td>
+</tr>
+<tr>
+<td>threshold</td>
+<td>해당 threshold 를 넘는 벡터를 정답으로 출력</td>
+</tr>
+</tbody></table>
 
-<p>1) 비학습 버전 : g2p converter, p2v converter 사용 
-  2) 학습 버전 : p2v + Siamese Network 학습 Encoder 사용 </p>
+<ol>
+<li>비학습 버전 : g2p converter, p2v converter 사용 </li>
+<li>학습 버전 : p2v + Siamese Network 학습 Encoder 사용 </li>
+</ol>
 
 <ul>
-<li>데모는 음악 도메인 NER 사전 기반 Phoneme Embedding 으로 학습 버전 Encoder 로 생성함.
-<code>javascript
-</code></li>
+<li>데모는 음악 도메인 NER 사전 기반 Phoneme Embedding 으로 학습 버전 Encoder 로 생성함.</li>
 </ul>
-<pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ifs_config</span>
+<pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ifs_config</span>
 <span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">inference</span> <span class="k">as</span> <span class="n">ifs_inference</span>
 
 <span class="n">config_ifs</span> <span class="o">=</span> <span class="n">ifs_config</span><span class="o">.</span><span class="n">get_p2vInferSent_config</span><span class="p">()</span>
@@ -369,10 +386,8 @@ threshold | 해당 threshold 를 넘는 벡터를 정답으로 출력</p>
 <span class="n">non_deep_result</span> <span class="o">=</span> <span class="n">non_deep_inference</span><span class="p">(</span> <span class="n">word</span> <span class="p">)</span>
 </code></pre><h2 id='error-detection'>Error Detection</h2>
 <p>보정 대상 문장을 검출하는 모델로, CNN 분류 모델로 학습.
-도메인별로 학습된 2개의 이진 분류 모델을 이용하여, &#39;날씨 보정 대상, &#39;음악 보정 대상&#39;, &#39;그 외&#39; 의 3가지 클래스로 분류
-<code>javascript
-</code></p>
-<pre class="highlight python tab-python"><code></code></pre><h2 id='error-correction'>Error Correction</h2>
+도메인별로 학습된 2개의 이진 분류 모델을 이용하여, &#39;날씨 보정 대상, &#39;음악 보정 대상&#39;, &#39;그 외&#39; 의 3가지 클래스로 분류</p>
+<pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code></code></pre><h2 id='error-correction'>Error Correction</h2>
 <p>기본적으로 Siamese Neural Network 을 통해 Speech Encoder 를 학습하여 Retrieval 방식으로 보정. 추가로 음악에서 Generative 방식 보정 방식 실험 
 각 도메인 특성에 맞는 모델 선택이 필요.</p>
 
@@ -390,10 +405,8 @@ threshold | 해당 threshold 를 넘는 벡터를 정답으로 출력</p>
 
 <p>Pointer Network 을 이용해 Error Span 을 찾아내고, 해당 Span 을 Speech Encoder 로 생성한 Phoneme Embedding 에서 Retrieval 하여 부분 보정</p>
 
-<p>Phoneme Embedding 의 경우 음악 도메인 NER 사전을 이용해 패턴으로 조합하여 구축. 최신 NER 사전이 미반영되어 있어 고려 필요
-<code>javascript
-</code></p>
-<pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ifs_config</span>
+<p>Phoneme Embedding 의 경우 음악 도메인 NER 사전을 이용해 패턴으로 조합하여 구축. 최신 NER 사전이 미반영되어 있어 고려 필요</p>
+<pre class="highlight javascript tab-javascript"><code></code></pre><pre class="highlight python tab-python"><code><span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ifs_config</span>
 <span class="kn">from</span> <span class="nn">p2v_snn_music_encoder</span> <span class="kn">import</span> <span class="n">inference</span> <span class="k">as</span> <span class="n">ifs_inference</span>
 <span class="kn">from</span> <span class="nn">ptr_net_err_span</span> <span class="kn">import</span> <span class="n">config</span> <span class="k">as</span> <span class="n">ptr_config</span>
 <span class="kn">from</span> <span class="nn">ptr_net_err_span</span> <span class="kn">import</span> <span class="n">inference</span> <span class="k">as</span> <span class="n">ptr_inference</span>
