publish: Update index.md
generated from commit 1e743dfc57bda19dd38821656675a18dc3f33b4f

--- a/index2.html
+++ b/index2.html
@@ -201,7 +201,7 @@
       <script src="javascripts/all.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;http&quot;,&quot;python&quot;,&quot;javascript&quot;]">
+  <body class="index2" data-languages="[&quot;http&quot;,&quot;python&quot;,&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
