publish: Update index.md
generated from commit c9f010e7766303693055fdb17cfb7f084d7be425

--- a/index.html
+++ b/index.html
@@ -496,7 +496,8 @@ Host: 13.209.114.137:4242
 <td>보정 결과 문장</td>
 </tr>
 </tbody></table>
-<h3 id='retrieval-2'>음악 Retrieval</h3><pre class="highlight http tab-http"><code><span class="err"> GET /stt-err-chkr/api/v0.1/correction/music?q={q}
+<h3 id='retrieval-2'>음악 Retrieval</h3><pre class="highlight http tab-http"><code><span class="err">
+  GET /stt-err-chkr/api/v0.1/correction/music?q={q}
 Accept: application/json
 User-Agent: Mozilla/5.0
 Host: 13.209.114.137:4242 
@@ -566,7 +567,8 @@ Host: 13.209.114.137:4242
 <td>해당 threshold 를 넘는 벡터를 정답으로 출력</td>
 </tr>
 </tbody></table>
-<h3 id='generative'>음악 Generative</h3><pre class="highlight http tab-http"><code><span class="err"> GET /stt-err-chkr/api/v0.1/correction/music_g?q={q}
+<h3 id='generative'>음악 Generative</h3><pre class="highlight http tab-http"><code><span class="err">
+  GET /stt-err-chkr/api/v0.1/correction/music_g?q={q}
 Accept: application/json
 User-Agent: Mozilla/5.0
 Host: 13.209.114.137:4242 
