publish: Update index.md
generated from commit 3ad42578ddeb312a06013032adf27936761f14f1

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ Seq2Seq + Attention 모델을 사용해 Generative 방식을 사용<br></li>
 <span class="na">User-Agent</span><span class="p">:</span> <span class="s">Mozilla/5.0</span>
 <span class="na">Host</span><span class="p">:</span> <span class="s">13.209.114.137:4242 </span>
 
-HTTP/1.1 200 OK
+ HTTP/1.1 200 OK
 Content-Type: text/html; charset=utf-8
 {
     resCode: "20000000",
@@ -342,7 +342,7 @@ Accept: application/json
 User-Agent: Mozilla/5.0
 Host: 13.209.114.137:4242 
 
-</span><span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span> <span class="m">200</span> <span class="ne">OK</span>
+ </span><span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span> <span class="m">200</span> <span class="ne">O</span>
 <span class="na">Content-Type</span><span class="p">:</span> <span class="s">text/html; charset=utf-8</span>
 <span class="s">{</span>
 <span class="s">    top1: "사랑의_트위스트",</span>
