--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
-<p>본 문서는 LG U+ STT 후보정 프로젝트에 사용된 API의 스펙과 사용법을 기술한 문서입니다.  </p>
+<p>v01
+본 문서는 LG U+ STT 후보정 프로젝트에 사용된 API의 스펙과 사용법을 기술한 문서입니다.  </p>
 
 <p>본 문서에서 다루고 있는 API 의 종류는</p>
 
@@ -284,12 +285,12 @@ Seq2Seq + Attention 모델을 사용해 Generative 방식을 사용<br></li>
 </ul>
 
 <p>해당 API 에 대해서, 다루고 있는 언어는 JavaScript, Python 입니다. Code example은 오른쪽의 어두운 부분에서 확일할 수 있으며 오른쪽 상단의 탭에서 언어를 바꿀 수 있습니다.</p>
-<h1 id='authentication'>Authentication</h1><h1 id='api'>API</h1><h2 id='lg-u-nlp-api'>LG U+ NLP API</h2><pre class="highlight http tab-http"><code><span class="err"> </span><span class="nf">GET</span> <span class="nn">/nlp?device={device}&amp;query={query}</span> <span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span>
+<h1 id='authentication'>Authentication</h1><h1 id='api'>API</h1><h2 id='lg-u-nlp-api'>LG U+ NLP API</h2><pre class="highlight http tab-http"><code><span class="err">  </span><span class="nf">GET</span> <span class="nn">/nlp?device={device}&amp;query={query}</span> <span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span>
 <span class="na">Accept</span><span class="p">:</span> <span class="s">application/json</span>
 <span class="na">User-Agent</span><span class="p">:</span> <span class="s">Mozilla/5.0</span>
 <span class="na">Host</span><span class="p">:</span> <span class="s">13.209.114.137:4242 </span>
 
- HTTP/1.1 200 OK
+  HTTP/1.1 200 OK
 Content-Type: text/html; charset=utf-8
 {
     resCode: "20000000",
